--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "cpy:images": "copyfiles -f src/assets/full/*.jpg dist/assets/full",
     "cpy:views": "copyfiles -f src/views/*.pug dist/views",
     "cpy:env": "copyfiles -f ./.env dist",
+    
     "build": "npx tsc && npm run cpy:images && npm run cpy:views && npm run cpy:env",
-    "build:prod": "npm run build && jasmine",
-    "preview": "node dist/index.js",
+    "test": "npm run build && jasmine",
+    "start:prod": "node dist/index.js",
+
+    "format": "prettier --write 'src/**/*.ts'",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix"
   },
@@ -18,13 +21,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "fs-extra": "^10.1.0",
-    "morgan": "^1.10.0",
-    "pug": "^3.0.2",
-    "sharp": "^0.30.7",
-    "supertest": "^6.2.4"
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -48,6 +46,11 @@
     "nodemon": "^2.0.19",
     "prettier": "2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "dotenv": "^16.0.2",
+    "fs-extra": "^10.1.0",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2",
+    "supertest": "^6.2.4"
   }
 }
